# scurvy

./: .gitignore  CMakeLists.txt  README.md  math.sage  math2.sage  math3.sage  nca.sage  plot.py  simulate.py
src/: path_stress_test.cpp  solve.cpp  stress_test.cpp  test.cpp
src/include/: basics.h  cv.h  maths.h  ncv.h  ncv_ca.h  ncv_nca.h  scurvy.h  solve.h
